<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
        >
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="50dp" android:background="@android:color/holo_blue_dark">
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/citiesHeader"
                android:id="@+id/textView" android:textSize="30dp" android:layout_weight="0"
                android:layout_gravity="center" android:gravity="center_vertical|left"
                android:singleLine="true" android:textColor="@android:color/white" android:paddingLeft="10dp"
                android:paddingRight="10dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/textView1" android:layout_gravity="left|center_vertical"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="50dp">
        <Button
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:text="@string/addnewcityButton"
                android:id="@+id/button" android:gravity="center" android:onClick="gotoEditActivity"
                android:layout_weight="1" android:background="@android:color/holo_orange_light"
                android:textColor="@android:color/black"/>
        <Button
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:text="@string/updateallButton"
                android:id="@+id/button1" android:layout_weight="1" android:onClick="syncAll"
                android:background="@android:color/holo_orange_light" android:textColor="@android:color/black"/>
    </LinearLayout>
    <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cities_citiesList"/>
</LinearLayout>

